tests/specs/run/ld_preload/set_with_allow_env.out
error: Uncaught (in promise) PermissionDenied: Requires --allow-all permissions to spawn subprocess with LD_PRELOAD environment variable.
const output = new Deno.Command("echo").spawn();
                                        ^
    at [WILDCARD]
